gcc/fortran/parse.c
@@ -1668,7 +1668,7 @@ parse_where_block (void)
 
 	case ST_WHERE_BLOCK:
 	  parse_where_block ();
-	  /* Fall through */
+          break;
 
 	case ST_ASSIGNMENT:
 	case ST_WHERE:
